report test cases